--- a/app/cotizador/cotizador.html
+++ b/app/cotizador/cotizador.html
@@ -1,115 +1,183 @@
 <div ng-controller="CotizadorController as cotizadorCtrl" class="container container-color-2 container-menu-margin">
     <div class="container-info">
-        <h1>Cotizador</h1>
-        <div class="cotizador-container">
-            <div class="controls controls-margin">
-                <label>Slider Fijo:</label>
-                <select ng-model="cotizadorCtrl.slider_fijo.id" class="select-control">
-                    <option value="1">SI</option>
-                    <option value="2">NO</option>
-                </select>
-            </div>
-            <div class="controls controls-margin">
-                <label>Slider Autoadministrable:</label>
-                <select ng-model="cotizadorCtrl.slider_administrable.id" class="select-control">
-                    <option value="1">SI</option>
-                    <option value="2">NO</option>
-                </select>
-            </div>
-            <div class="controls controls-margin">
-                <label>Contactos:</label>
-                <select ng-model="cotizadorCtrl.contactos.id" class="select-control">
-                    <option value="1">SI</option>
-                    <option value="2">NO</option>
-                </select>
-            </div>
-            <div class="controls controls-margin">
-                <label>Información de Empresas:</label>
-                <select ng-model="cotizadorCtrl.empresa_info.id" class="select-control">
-                    <option value="1">SI</option>
-                    <option value="2">NO</option>
-                </select>
-            </div>
-            <div class="controls controls-margin">
-                <label>Información de Productos:</label>
-                <select ng-model="cotizadorCtrl.producto_info.id" class="select-control">
-                    <option value="1">SI</option>
-                    <option value="2">NO</option>
-                </select>
-            </div>
-            <div class="controls controls-margin">
-                <label>Multipágina:</label>
-                <select ng-model="cotizadorCtrl.multipaginas.id" class="select-control">
-                    <option value="1">SI</option>
-                    <option value="2">NO</option>
-                </select>
-            </div>
-            <div class="controls controls-margin">
-                <label>Noticias:</label>
-                <select ng-model="cotizadorCtrl.noticias.id" class="select-control">
-                    <option value="1">SI</option>
-                    <option value="2">NO</option>
-                </select>
-            </div>
-            <div class="controls controls-margin">
-                <label>Usuarios:</label>
-                <select ng-model="cotizadorCtrl.usuarios.id" class="select-control">
-                    <option value="1">SI</option>
-                    <option value="2">NO</option>
-                </select>
-            </div>
-            <div class="controls controls-margin">
-                <label>Ecommerce:</label>
-                <select ng-model="cotizadorCtrl.ecommerce.id" class="select-control">
-                    <option value="1">SI</option>
-                    <option value="2">NO</option>
-                </select>
-            </div>
-            <div class="controls controls-margin">
-                <label>Caja:</label>
-                <select ng-model="cotizadorCtrl.caja.id" class="select-control">
-                    <option value="1">SI</option>
-                    <option value="2">NO</option>
-                </select>
-            </div>
-            <div class="controls controls-margin">
-                <label>Cobros Online:</label>
-                <select ng-model="cotizadorCtrl.cobros_online.id" class="select-control">
-                    <option value="1">SI</option>
-                    <option value="2">NO</option>
-                </select>
-            </div>
-            <div class="controls controls-margin">
-                <label>Administración de Imágenes:</label>
-                <select ng-model="cotizadorCtrl.imagenes_admin.id" class="select-control">
-                    <option value="1">SI</option>
-                    <option value="2">NO</option>
-                </select>
-            </div>
-            <div class="controls controls-margin">
-                <label>Comentarios:</label>
-                <select ng-model="cotizadorCtrl.comentarios.id" class="select-control">
-                    <option value="1">SI</option>
-                    <option value="2">NO</option>
-                </select>
-            </div>
+        <h1>Cotizador en Línea</h1>
+        <p>Complete nuestro formulario en línea y recibira una propuesta detallada via email a la menor brevedad posible</p>
 
-            <div class="controls controls-margin">
-                <label>Nombre:</label>
-                <input type="text" class="form-control" ng-model="cotizadorCtrl.nombre" >
+        <div class="container-row">
+            <div class="container-colum" style="flex: 1 1 auto;">
+                <div class="controls controls-margin">
+                    <label>Nombre:</label>
+                    <input type="text" class="form-control" ng-model="cotizadorCtrl.nombre" >
+                </div>
+                <div class="controls controls-margin">
+                    <label>Teléfono:</label>
+                    <input type="text" class="form-control" ng-model="cotizadorCtrl.telefono" >
+                </div>
             </div>
-            <div class="controls controls-margin">
-                <label>Mail:</label>
-                <input type="text" class="form-control" ng-model="cotizadorCtrl.email" >
-            </div>
-            <div class="controls controls-margin">
-                <label>Comentario:</label>
-                <textarea ng-model="cotizadorCtrl.message" cols="50" rows="5" class="form-control"></textarea>
-            </div>
-            <div class="btn-chat">
-                <div class="arrow-up arrow-chat-margin"></div>
-                <button id="contacto-enviar-mobile" ng-click="cotizadorCtrl.sendMail();">Pedir Cotización</button>
+            <div class="container-colum" style="flex: 1 1 auto;">
+                <div class="controls controls-margin">
+                    <label>Mail:</label>
+                    <input type="text" class="form-control" ng-model="cotizadorCtrl.email" >
+                </div>
+                <div class="controls controls-margin">
+                    <label>Comentario:</label>
+                    <textarea ng-model="cotizadorCtrl.message" cols="50" rows="5" class="form-control"></textarea>
+                </div>
             </div>
         </div>
+
+        <h3>Nuestros Servicios</h3>
+        <div class="container-row">
+            <div class="container-colum" style="flex: 1 1 auto;">
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.desarrolloweb" ><span class="">Diseño de Página Web</span>
+                </div>
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.hosting" ><span class="">Hosting</span>
+                </div>
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.logotipos" ><span class="">Diseño de Logotipos</span>
+                </div>
+            </div>
+            <div class="container-colum" style="flex: 1 1 auto;">
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.desarrollografico" ><span class="">Diseño Gráfico</span>
+                </div>
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.dominio" ><span class="">Registro de Dominio</span>
+                </div>
+            </div>
+        </div>
+
+        <h3>Diseño de Página Web</h3>
+        <div class="container-row">
+            <div class="container-colum">
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.nuevapagina" ><span class="">Diseño de una nueva página web</span>
+                </div>
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.redisenio" ><span class="">Rediseño de su página actual</span>
+                </div>
+            </div>
+        </div>
+        <div class="container-row">
+            <div class="container-colum">
+                <div class="controls controls-margin">
+                    <label>Su proyecto:</label>
+                    <textarea ng-model="cotizadorCtrl.comentario" cols="50" rows="5" class="form-control"></textarea>
+                </div>
+            </div>
+        </div>
+        <div class="container-row">
+            <div class="container-colum" style="flex: 1 1 auto;">
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.slider_fijo" ><span class="">Slider Fijo</span>
+                </div>
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.slider_administrable" ><span class="">Slider Autoadministrable</span>
+                </div>
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.contactos" ><span class="">Contactos</span>
+                </div>
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.empresa_info" ><span class="">Información de Empresas</span>
+                </div>
+            </div>
+            <div class="container-colum" style="flex: 1 1 auto;">
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.producto_info" ><span class="">Información de Productos</span>
+                </div>
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.multipaginas" ><span class="">Multipágina</span>
+                </div>
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.noticias" ><span class="">Noticias</span>
+                </div>
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.usuarios" ><span class="">Usuarios</span>
+                </div>
+            </div>
+            <div class="container-colum" style="flex: 1 1 auto;">
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.ecommerce" ><span class="">Ecommerce</span>
+                </div>
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.caja" ><span class="">Caja</span>
+                </div>
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.cobros_online" ><span class="">Cobros Online</span>
+                </div>
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.imagenes_admin" ><span class="">Administración de Imágenes</span>
+                </div>
+            </div>
+        </div>
+        <div class="container-row">
+            <div class="container-colum">
+                <div class="controls controls-margin">
+                    <label>Website de referencia:</label>
+                    <input type="text" class="form-control" ng-model="cotizadorCtrl.websitetoview" >
+                </div>
+            </div>
+        </div>
+
+        <h3>Registro de Dominios</h3>
+        <div class="container-row">
+            <div class="container-colum" style="flex: 1 1 auto;">
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.nuevapagina" ><span class="">Registrar un nuevo dominio</span>
+                </div>
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.redisenio" ><span class="">No, ya tengo el dominio</span>
+                </div>
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.redisenio" ><span class="">No estoy seguro</span>
+                </div>
+            </div>
+            <div class="container-colum" style="flex: 1 1 auto;">
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.nuevapagina" ><span class="">.com / .net /</span>
+                </div>
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.redisenio" ><span class="">.com.do / .do</span>
+                </div>
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.redisenio" ><span class="">otro</span>
+                </div>
+            </div>
+            <div class="container-colum" style="flex: 1 1 auto;">
+                <div class="controls controls-margin">
+                    <label>Dominio deseado:</label>
+                    <input type="text" class="form-control" ng-model="cotizadorCtrl.websitetoview" >
+                </div>
+            </div>
+        </div>
+
+        <h3>Diseño Gráfico</h3>
+        <div class="container-row">
+            <div class="container-colum" style="flex: 1 1 auto;">
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.nuevapagina" ><span class="">Diseño de Logotipo</span>
+                </div>
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.redisenio" ><span class="">Tarjetas</span>
+                </div>
+                <div class="controls controls-margin">
+                    <input type="checkbox" ng-model="cotizadorCtrl.redisenio" ><span class="">Catálogo</span>
+                </div>
+            </div>
+            <div class="container-colum" style="flex: 1 1 auto;">
+                <div class="controls controls-margin">
+                    <label>Otro:</label>
+                    <input type="text" class="form-control" ng-model="cotizadorCtrl.websitetoview" >
+                </div>
+            </div>
+        </div>
+
+        <div class="btn-chat">
+            <div class="arrow-up arrow-chat-margin"></div>
+            <button id="contacto-enviar-mobile" ng-click="cotizadorCtrl.sendMail();">Pedir Cotización</button>
+        </div>
+
     </div>
 </div>
